<resources>
    <string name="app_name">MyTest</string>
    <string name="add">添加</string>
    <string name="share">分享</string>
    <string name="open_failed">打开失败</string>
    <string name="select">选择</string>
    <string name="file_name">文件名</string>
    <string name="auto_open_when_boot_completed">开机完成后自动打开书</string>
    <string name="settings">设置</string>
    <string name="slide_interval">翻页间隔</string>
    <string name="slide_time">翻页次数</string>
    <string name="slide_start_page">起始页数</string>
    <string name="slide_total_page">总页数</string>
    <string name="open_wifi">打开Wifi</string>
    <string name="close_wifi">关闭Wifi</string>
    <string name="kreader_test">Kreader自动翻页测试</string>
    <string name="apps_with_wakelocks_permission">有Wakelock权限的应用:</string>
    <string name="current_apps_with_wakelock_acquired">\n 当前持有Wakelock的应用:</string>
</resources>
