<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/file_name"
            android:textSize="@dimen/title_level2_text_size" />

        <EditText
            android:id="@+id/et_file_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="mnt/sdcard/test.pdf"
            android:textSize="@dimen/title_level2_text_size" />

        <Button
            android:id="@+id/btn_file_select"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/slide_interval"
            android:textSize="@dimen/title_level2_text_size" />

        <EditText
            android:id="@+id/et_slide_interval"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="number"
            android:maxLength="2"
            android:text="6"
            android:textSize="@dimen/title_level2_text_size" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLength="6"
            android:text="@string/slide_time"
            android:textSize="@dimen/title_level2_text_size" />

        <EditText
            android:id="@+id/et_slide_time"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="number"
            android:text="3000"
            android:textSize="@dimen/title_level2_text_size" />

    </LinearLayout>

    <CheckBox
        android:id="@+id/cb_auto_open_book"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:checked="true"
        android:text="@string/auto_open_when_boot_completed"
        android:textSize="@dimen/title_level2_text_size" />

    <Button
        android:id="@+id/btn_set"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/settings"
        android:textSize="@dimen/title_level2_text_size" />

</LinearLayout>